Fixed main command